- Ellipses issue fixed for the too long single word - Fixed UI responsiveness for the Reject screen Fixed UI responsiveness for registration screen

--- a/app/styles/_custom.scss
+++ b/app/styles/_custom.scss
@@ -115,6 +115,8 @@ textarea:-ms-input-placeholder {
 
 .icon-center {
   vertical-align: middle;
+  text-align: center;
+  margin-right: -1rem;
 }
 
 .icon-text {
@@ -124,6 +126,8 @@ textarea:-ms-input-placeholder {
 .link-blue {
   color: $dark-blue;
   text-decoration: underline;
+  padding-left: 0.8rem;
+  margin-top: 0.2rem;
 }
 
 .icon-center {
@@ -204,6 +208,7 @@ textarea:-ms-input-placeholder {
   -ms-text-overflow: ellipsis;
   -o-text-overflow: ellipsis;
   line-height: 1.5;    /* fallback */
+  word-break: break-all;
 }
 .one-line-ellipsis {
   max-height: 1.4rem;  /* fallback */
@@ -326,9 +331,37 @@ input[type="radio"] + label {
   vertical-align: middle;
 }
 
-.radio a.active {
-  background: $coral-red;
-  border: 1px solid $coral-red; }
+.radio-buttons {
+  border-spacing: 0.1rem;
+  color: white;
+  display: table;
+  table-layout: fixed !important;
+  width: 100%;
+  height: 3.2rem;
+  @media #{$small-only} {
+    height: 2.7rem;
+  }
+  .active {
+    background: $coral-red;
+    border: 1px solid $coral-red;
+  }
+  li {
+    border: solid 1px white;
+    vertical-align: middle;
+    text-align: center;
+    @media #{$small-only} {
+      margin: 0.1rem;
+      padding: 0.1rem;
+      font-size: 0.68rem !important;
+    }
+
+    .radio {
+      vertical-align: middle;
+      text-align: center;
+      padding: 0.335rem;
+    }
+  }
+}
 
 .unread_message {
   height: 30px;
