--- a/app/styles/_reject.scss
+++ b/app/styles/_reject.scss
@@ -5,7 +5,15 @@
     input[type="radio"] {
       display: inline-block !important; }
     input[type="radio"] + label {
-      color: black !important; }
+      color: black !important;
+      width: 78%;
+      @media #{$small-only} {
+        font-size: 0.8rem;
+      }
+      input {
+        width: 100%;
+      }
+    }
     input[type="radio"]:checked + label {
       border: none;
       background: inherit; }
